--- a/_config.yml
+++ b/_config.yml
@@ -106,20 +106,20 @@ friends: [
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: "乱序",
-        href: "http://mida.re/"
+        title: "易代币",
+        href: "https://www.yidaibi.me/"
     },{
-        title: "前端外刊评论",
-        href: "http://qianduan.guru/"
+        title: "代币群发吧",
+        href: "https://www.qunfaba.com/"
     },{
-        title: "天镶的博客",
-        href: "http://lingyu.wang/"
+        title: "360APP区块链应用导航",
+        href: "https://www.360app.com/"
     },{
-        title: "Luke 的自留地",
-        href: "http://hmqk1995.github.io"
+        title: "云加密交易所",
+        href: "https://www.yunjiami.com/"
     },{
-        title: "Ebn's Blog",
-        href: "http://ebnbin.com/"
+        title: "光元区块链",
+        href: "https://www.sunpower.io/"
     },{
         title: "SmdCn's Blog",
         href: "http://blog.smdcn.net"
