--- a/_config.yml
+++ b/_config.yml
@@ -121,19 +121,22 @@ friends: [
         title: "光元区块链",
         href: "https://www.sunpower.io/"
     },{
-        title: "SmdCn's Blog",
-        href: "http://blog.smdcn.net"
+        title: "云基金",
+        href: "https://www.yunjijin.com/"
     },{
-        title: "David's Game",
-        href: "https://www.ruoyaowu.com/"
+        title: "云储蓄",
+        href: "https://www.yunchuxu.com/"
     },{
-        title: "DHong Say",
-        href: "http://dhong.co"
+        title: "骰宝",
+        href: "http://www.84game.com/cryptodice/"
     },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
+        title: "龙虎斗",
+        href: "http://www.84game.com/dragon-tiger/"
     },{
-        title: "解旻的博客",
-        href: "http://xieminis.me/"
+        title: "炉石传说",
+        href: "http://www.84game.com/cryptoheartstone/"
+    },{
+        title: "小小矿工",
+        href: "https://www.little.cc/"
     }
 ]
