--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Do one thing you really love.<br>爱过许多人，只为一个人。做过很多事，只为一件事。"
+sidebar-about-description: "微信QQ：231799955<br>爱过许多人，只为一个人。做过很多事，只为一件事。"
 sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
